tests/03-typecheck/14-match-binds.ref
tests/03-typecheck/14-match-binds.stack:2:5, Semantic error: match tried to bind to many items, expected (a, b) but got (int)
