tests/03-typecheck/14-match-binds.stack
func invalid_match (int) (int) in
    match a b in
    end
end
